Fixed the imports and the .train z-index.

--- a/source/stylesheets/components/_landscape.sass
+++ b/source/stylesheets/components/_landscape.sass
@@ -10,6 +10,12 @@
   margin-left: -660px
   background-repeat: no-repeat
 
+  &.zero
+    position: relative
+    top: 30px
+    left: 0
+    margin-left: 0
+
   &.one
     background-image: url('/layers/layer1.svg')
     background-size: auto 145%
@@ -839,7 +845,7 @@ i
 
 .imports
   height: 20px
-  left: -80px
+  left: 0px
   position: absolute
   @include transition(all 0.3s ease-in)
 
